--- a/src/app/edit-profile/edit-profile.page.scss
+++ b/src/app/edit-profile/edit-profile.page.scss
@@ -1,12 +1,8 @@
-/* <div  class= "imageHold" >
-<img class= "profileImg"[src]= "profileImage">  */
 
 
-.imageHold .profileImg {
-    display: inline-block;
-    width: 100px;
-    height: 100px;
-    background-position: center;
-    background-size: cover;
-    border-radius: 50%;
-}
+ion-avatar  {     
+
+     width: 200px !important;  //any size
+     height: 200px !important; //any size 
+     margin: auto;
+    }
