arrow back function

--- a/src/app/details/details.page.html
+++ b/src/app/details/details.page.html
@@ -48,7 +48,7 @@
           
              <ion-col>
           <ion-button shape="circle"  color="secondary"  (click)="makeWipped()"> 
-            <h6 *ngIf ="category == 'Wipped'" >Wipped </h6><h6 *ngIf ="category == 'Wipping'" >Wipped ?</h6></ion-button>
+            <h6 *ngIf ="category == 'Wipped'" >Wipped </h6><h6 *ngIf ="category == 'Wipping'" >Make Wipped ?</h6></ion-button>
         </ion-col>
       </ion-row>
       </ion-grid>
