--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -6,7 +6,7 @@
       
       <ion-item lines="none" class="item item-trns text-center">
         <ion-label position="floating" >Email</ion-label>
-        <ion-input type="text" formControlName="email"></ion-input>
+        <ion-input type="email" formControlName="email"></ion-input>
       </ion-item>
       <div class="validation-errors">
         <ng-container *ngFor="let validation of validation_messages.email">
