--- a/src/app/favorites/favorites.page.html
+++ b/src/app/favorites/favorites.page.html
@@ -7,6 +7,11 @@
 
 <ion-content>
   <ion-grid>
+      <ion-row  *ngIf="favorite?.favoriteList >= 0">
+            <ion-col>
+              <p style="color: #383a3e">Find some works you like and favorite them :)</p>
+            </ion-col>
+          </ion-row>
      <ion-row>
         <ion-col size="12" >
            <ion-card style="margin-top: 10px !important;" *ngFor ="let favorite of favoriteList">   
