register login changed

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -31,7 +31,7 @@
     </form>
     
     <p class="go-to-register">
-      No account yet? <ion-button color="transparent" (click)="goRegisterPage()">Register</ion-button>
+      No account yet? <ion-button color="transparent" (click)="goRegisterPage()">sign up</ion-button>
     </p>
     </ion-content>
  
