--- a/src/app/favorites/favorites.page.html
+++ b/src/app/favorites/favorites.page.html
@@ -7,7 +7,7 @@
 
 <ion-content>
   <ion-grid>
-      <ion-row  *ngIf="favorite?.favoriteList >= 0">
+      <ion-row  *ngIf="favorite?.favoriteList.length > 0">
             <ion-col>
               <p style="color: #383a3e">Find some works you like and favorite them :)</p>
             </ion-col>
