--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -5,8 +5,8 @@
 
 
     <ion-item color="transparent" style="border: white">
-      <ion-label style="color:white !important" position="floating" color="primary">Email</ion-label>
-      <ion-input type="text" formControlName="email"></ion-input>
+      <ion-label style="color:rgb(0, 0, 0) !important" position="floating" color="primary">Email</ion-label>
+      <ion-input type="email" formControlName="email"></ion-input>
     </ion-item>
 
     <div class="validation-errors">
@@ -18,7 +18,7 @@
     </div>
 
     <ion-item color="transparent">
-      <ion-label style="color:white !important" position="floating" color="primary">Password</ion-label>
+      <ion-label style="color:rgb(0, 0, 0) !important" position="floating" color="primary">Password</ion-label>
       <ion-input type="password" formControlName="password"></ion-input>
     </ion-item>
     <div class="validation-errors">
@@ -29,7 +29,7 @@
       </ng-container>
     </div>
 
-    <ion-button   class="submit-btn" expand="block" type="submit" [disabled]="!validations_form.valid">Register</ion-button>
+    <ion-button   class="submit-btn" expand="block" type="submit" [disabled]="!validations_form.valid">SIGN UP</ion-button>
     <label class="error-message">{{errorMessage}}</label>
     <label class="success-message">{{successMessage}}</label>
   </form>
