--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -6,33 +6,24 @@
 </ion-item>
     </ion-title>
    <!-- *ngIf="image.length == 0"  -->
+   <ion-button *ngIf ="image.length > 0"  color="medium-tint" slot="start" (click)="cancelThis()">cancel</ion-button>
    <ion-button [disabled]="!validations_form.valid"  slot="end" class="submit-btn" expand="block" type="submit" color="medium-tint"  onclick="document.getElementById('hiddenSubmitButton').click()">
     Create
   </ion-button>
   </ion-toolbar>
 </ion-header>
 
-<ion-content >
+<ion-content no-padding>
 
-  <!--   *ngIf="image.length == 0 && !category" -->
-       <!-- <div id="categorybtn"  *ngIf="image.length == 0 && !category" >
-  <ion-button   class="imagebutton" size="large" shape="round" color="secondary" (click)="newProject()"><ion-icon name="heart-half" ></ion-icon></ion-button>
-  <h5 style="color:white; margin-top: 22px; margin-left: 9px;">New Project</h5>
-   </div>
-  *ngIf="image.length == 0 && !category"  
-  <div id="categorybtn"  *ngIf="image.length == 0 && !category" >
-   <ion-button  size="large" color="tertiary" shape="round"  (click)="completeProject()" ><ion-icon name="heart-empty" ></ion-icon></ion-button>
-   <h5 style="color:white;  margin-top: 22px; margin-left: 9px;">Finished Project</h5>
-  </div> -->
-  <!-- *ngIf ="!image?.length > 0 && category" -->
+
  
-  <ng-container *ngIf = "nextOptions == 'previous'">
-      <ion-item no-padding style = "text-align: center;" id="projectTitle" color="transparent">
+  <ng-container style = "text-align: center;" *ngIf = "nextOptions == 'previous'">
+      <ion-item  lines="none" no-padding style = "text-align: center;" id="projectTitle" color="transparent">
             <ion-input [(ngModel)]="title" class="text-input" placeholder="Project Title"></ion-input>
                </ion-item>
                  <div style="text-align: center !important;" >
-                 <ion-button  (click)="nextOption()" *ngIf ="!title"  style="margin-top: 20%" color ="transparent">maybe later</ion-button>
-                 <ion-button  (click)="nextOption()" *ngIf = "title "   color ="transparent">next</ion-button>
+                 <ion-button  (click)="nextOption()" *ngIf ="!title"  style="margin-top: 10%; margin-left: 0%" color ="transparent">maybe later</ion-button>
+                 <ion-button  (click)="nextOption()" *ngIf = "title"   color ="transparent">next</ion-button>
                </div> 
      </ng-container>
         
