--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -19,7 +19,7 @@
  
   <ng-container style = "text-align: center;" *ngIf = "nextOptions == 'previous'">
       <ion-item  lines="none" no-padding style = "text-align: center;" id="projectTitle" color="transparent">
-            <ion-input [(ngModel)]="title" class="text-input" placeholder="Project Title"></ion-input>
+            <ion-input [(ngModel)]="title" class="text-input" placeholder="Project Title?"></ion-input>
                </ion-item>
                  <div style="text-align: center !important;" >
                  <ion-button  (click)="nextOption()" *ngIf ="!title"  style="margin-top: 10%; margin-left: 0%" color ="transparent">maybe later</ion-button>
