--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -9,6 +9,10 @@
       --ion-background-color:#111D12;
   } 
 
+  ion-input {
+    margin-left: 9px!important;
+    font-size: 25px !important;
+  }
 
   ion-tabs{
 
