--- a/src/app/details-feed/details-feed.page.html
+++ b/src/app/details-feed/details-feed.page.html
@@ -27,5 +27,10 @@
           <h2>{{item.title}}</h2>
           <p>{{item.description}}</p></div>
   </div>
+<!--   <ion-item>
+    <ion-label position="stacked">Stacked Label</ion-label>
+    <ion-input [(ngModel)]="this.comment"></ion-input>
+  </ion-item>
+  <ion-button (click)="addToComments(this)">leave comment</ion-button> -->
 </ion-content>
 
