--- a/src/app/details-feed/details-feed.page.html
+++ b/src/app/details-feed/details-feed.page.html
@@ -26,6 +26,7 @@
           </ion-grid>
           <h2>{{item.title}}</h2>
           <p>{{item.description}}</p></div>
+          <ion-button (click)="favoriteUser()">Follow Project</ion-button>
   </div>
 <!--   <ion-item>
     <ion-label position="stacked">Stacked Label</ion-label>
