--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -50,7 +50,7 @@ right: 0;">
     <ion-card-content  style="padding-top: 0px !important;">
         {{item.userBio}}
     </ion-card-content>
-    <ion-button (click)="goToFolowProjects()" >Followed Projects</ion-button>
+    <ion-button color="secondary" (click)="goToFolowProjects()" >Followed Projects</ion-button>
   </ion-card>
 
 
