--- a/src/app/details-feed/details-feed.page.html
+++ b/src/app/details-feed/details-feed.page.html
@@ -26,7 +26,8 @@
           </ion-grid>
           <h2>{{item.title}}</h2>
           <p>{{item.description}}</p></div>
-          <ion-button  color="dark" (click)="favoriteUser()">Follow Project</ion-button>
+          <ion-button *ngIf ="!followButton == true"  color="dark" (click)="favoriteUser()">Follow Project</ion-button>
+          <ion-button *ngIf ="followButton == true" color= "light"  >Followed Project</ion-button>
   </div>
 <!--   <ion-item>
     <ion-label position="stacked">Stacked Label</ion-label>
