--- a/src/app/details-feed/details-feed.page.scss
+++ b/src/app/details-feed/details-feed.page.scss
@@ -10,11 +10,14 @@
 }
 
 .container {
+  margin-top: 30px;
   display: grid;
   grid-template-rows: max-content minmax(0, 1fr);
+
  }
 
  .content {
+  
    grid-row: 2 / 3;
  }
 
