--- a/src/app/details-feed/details-feed.page.html
+++ b/src/app/details-feed/details-feed.page.html
@@ -49,6 +49,12 @@
       <div style=" flex: 1; margin-left: 20px;"> <h6 style="color: rgb(73, 73, 73)">"{{item?.comment}}"</h6></div>
     </ng-container>
 </ion-card>
+
+    <ion-card *ngFor="let item of items">
+      <p>{{item}}</p>
+      </ion-card>
+   
+  
   <ion-item>   
   <ion-textarea [(ngModel)]="comment" placeholder="add comment"></ion-textarea>
 </ion-item>
